fix: grid gap on all responsive views

--- a/src/pages/Dashboard/styles.scss
+++ b/src/pages/Dashboard/styles.scss
@@ -484,7 +484,7 @@ $borderColor: #eeebf5;
                 width: 95%;
                 padding: 0;
                 grid-template-columns: 1fr 1fr;
-                grid-gap: 6%;
+                grid-gap: 0 4%;
 
                 @media (max-width: 700px) {
                     grid-template-columns: 1fr;
